# internal/domain/models/ore.go
@@ -1,0 +1,8 @@
+package models
+
+// OreTotals represents aggregated ore amounts.
+type OreTotals struct {
+	Shiny  int
+	Glowy  int
+	Starry int
+}
